Fixed gaps

--- a/src/components/LeftColumn/index.module.scss
+++ b/src/components/LeftColumn/index.module.scss
@@ -4,5 +4,5 @@
   width: 20%;
   display: flex;
   flex-direction: column;
-  gap: $gap-xl
+  gap: $gap-4xl
 }
