--- a/src/components/ProfileSection/index.module.scss
+++ b/src/components/ProfileSection/index.module.scss
@@ -4,5 +4,5 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  gap: $gap-xl;
+  gap: $gap-4xl;
 }
