--- a/src/components/Share/index.module.scss
+++ b/src/components/Share/index.module.scss
@@ -3,7 +3,8 @@
 .main {
   display: flex;
   align-items: center;
-  gap: $gap-lg
+  gap: $gap-lg;
+  cursor: pointer;
 }
 
 .text {
